--- a/Book-Store/appsettings.json
+++ b/Book-Store/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "SendGridKey": "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",
+  "SendGridUser": "BulkyBook",
+  "Stripe": {
+    "SecretKey": "sk_test_WKqbrPAGDHqHRuGauPl1BJwR00mx0mZGy8",
+    "PublishableKey": "pk_test_ct2earmEUGFAo8AA4jaVc4KR00FoTuud0j"
+  }
 }
